k8s/backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: chat-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-template
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: omipawar097/chatapp-backend:latest
        ports:
        - containerPort: 5001
