k8s/frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: chat-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-template
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: omipawar097/chatapp-frontend:latest
        ports:
        - containerPort: 80
