k8s/mongo-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels: 
     app: mongodb
  template:
    metadata:
      name: mongodb-template
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: pvc1
