k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app

spec:
  selector: 
    app: backend
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
