k8s/mongo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: chat-app

spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
